# simdefy_python

./: .gitmodules  CMakeLists.txt  README.md  benchmark.cpp  build.sh  functions.h  pythonBinding.cpp  simd.h  test.py  test_timing.py
